Adding hobbies list

--- a/index.html
+++ b/index.html
@@ -43,5 +43,23 @@
             </div>
         </section>
 
+        <section id="hobbies">
+
+            <h2>Hobbies:</h2>
+
+            <ul>
+                <li>RPGs</li>
+                <li>Fishing</li>
+                <li>Aramaic Studies</li>
+                <li>Card Games</li>
+                <li>Etc.</li>
+            </ul>
+
+        </section>
+
+        <footer>
+            &copy; 2023 - Steve Caruso
+        </footer>
+
 </body>
 </html>
